tests/whiley/valid/test_1808.wyal
define lastIndexOf_loopinvariant_32(int[] xs, int x, int i, int last) is:
    (i >= 0) && ((last >= -1) && (last < |xs|))


define lastIndexOf_loopinvariant_42(int[] xs, int x, int i, int last) is:
    (last == -1) || (xs[last] == x)


assert "loop invariant not restored":
    forall(int last, int last$1, int x, int i, int i$1, int last$2, int last$3, int[] xs, int i$2):
        if:
            i == 0
            last == -1
            lastIndexOf_loopinvariant_32(xs, x, i$1, last$1)
            lastIndexOf_loopinvariant_42(xs, x, i$1, last$1)
            i$1 < |xs|
            either:
                xs[i$1] == x
                last$2 == i$1
                last$3 == last$2
            or:
                xs[i$1] != x
                last$3 == last$1
            i$2 == (i$1 + 1)
        then:
            lastIndexOf_loopinvariant_32(xs, x, i$2, last$3)


