tests/whiley/invalid/test_82.wyal
define count_requires_0(int n) is:
    n >= 0


define count_loopinvariant_34(int n, int i) is:
    (i >= 0) && (i <= n)


assert "loop invariant not established by first iteration":
    forall(int n, int i$3, int i$1, int i, int i$2):
        if:
            count_requires_0(n)
            i == 0
            either:
                i == 3
                i$1 == (i + 2)
                i$3 == i$1
            or:
                i != 3
                i$2 == (i + 1)
                i$3 == i$2
        then:
            count_loopinvariant_34(n, i$3)


